<resources>
    <string name="app_name">RoomShoppingList</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="item_name">Item name</string>
    <string name="item_count">Item count</string>
    <string name="item_price">Item price</string>
    <string name="name">Name</string>
    <string name="count">Count</string>
    <string name="price">Price</string>
    <string name="dialog_title">New Item</string>
    <string name="dialog_message">Add new shopping item</string>
    <string name="dialog_ok">Ok</string>
    <string name="dialog_cancel">Cancel</string>
</resources>
