<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             android:layout_width="match_parent"
                                             android:layout_height="wrap_content">

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="0dp"
            android:layout_height="wrap_content" android:id="@+id/linearLayout"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">
        <TextView
                android:text="@string/item_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/nameTextView" android:layout_weight="1"
                android:layout_margin="8dp"/>
        <TextView
                android:text="@string/item_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/countTextView" android:layout_weight="1"
                android:layout_margin="8dp"/>
        <TextView
                android:text="@string/item_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/priceTextView" android:layout_weight="1"
                android:layout_margin="8dp"/>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>