<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent">

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent" android:layout_margin="8dp">
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <TextView
                    android:text="@string/name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/textView" android:layout_weight="1"/>
            <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:ems="10"
                    android:id="@+id/nameEditText" android:layout_weight="1" android:hint="@string/name"
                    android:autofillHints="@string/name"/>
        </LinearLayout>
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <TextView
                    android:text="@string/count"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/textView2" android:layout_weight="1"/>
            <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:ems="10"
                    android:id="@+id/countEditText" android:layout_weight="1" android:hint="@string/count"
                    android:autofillHints="@string/count"/>
        </LinearLayout>
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <TextView
                    android:text="@string/price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/textView3" android:layout_weight="1"/>
            <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:ems="10"
                    android:id="@+id/priceEditText" android:layout_weight="1" android:hint="@string/price"
                    android:autofillHints="@string/price"/>
        </LinearLayout>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>